# llimona

./: BRANCHING_MODEL.md  README.md  pyproject.toml  sonar-project.properties  sonar.properties
.github/actions/publishing/: action.yaml
.github/actions/setup-repo/: action.yaml
.github/workflows/: common_get_version.yaml  common_make_release.yaml  common_push_version.yaml  manual_increase_version.yaml  manual_make_release.yaml  manual_stabilize_release.yaml  pull_request.yaml  push_code.yaml  push_release.yaml  sonnar.yaml
addons/llimona_azure_openai/: README.md  pyproject.toml
addons/llimona_azure_openai/src/llimona_azure_openai/: providers.py
addons/llimona_mock_provider/: README.md  pyproject.toml
addons/llimona_mock_provider/src/llimona_mock_provider/: __init__.py  providers.py
addons/llimona_opentelemetry/: README.md  pyproject.toml
addons/llimona_opentelemetry/src/llimona_opentelemetry/: __init__.py  sensors.py
addons/llimona_smart_provider/: README.md  pyproject.toml
addons/llimona_smart_provider/src/llimona_smart_provider/: __init__.py  providers.py
docs/: arch.md
example_config/: app.yaml
example_config/azure_1/: provider.yaml
example_config/azure_2/: provider.yaml
src/llimona/: __init__.py  addons.py  app.py  component.py  context.py  id_builders.py  provider_loaders.py  providers.py  registries.py  sensors.py  utils.py
src/llimona/cli/: __init__.py  addons.py  openai.py  providers.py  utils.py
src/llimona/config/: app.py  yaml.py
src/llimona/interfaces/openai/: __init__.py  mappers.py
src/llimona/interfaces/openai/models/: api_models.py  api_responses.py  content.py  enums.py  events.py  response.py  tools.py
src/llimona/models/: common.py
tests/: test_addons.py  test_app.py  test_context.py  test_id_builders.py  test_provider_loaders.py  test_providers.py  test_registries.py  test_sensors.py  test_utils.py
tests/config/: test_yaml.py
tests/config/data/: compose_1.yaml  compose_list.yaml  compose_list_extended.yaml  compose_mapping.yaml  compose_mapping_override.yaml  envvar.yaml
tests/config/data/extra/: float.yaml  integer.yaml  list_2.yaml  mapping.yaml  scalar.yaml
