[project]
name = "Llimona"
version = "0.3.1"
description = "Open and modular framework for building observable LLM gateways with OpenAI-compatible APIs and pluggable providers."
readme = "README.md"
authors = [
    { name = "Alfred", email = "alfred82santa@gmail.com" }
]

urls = { "Source" = "https://github.com/llimona-org/llimona" }

requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pydantic-views>=0.3.0",
    "pyyaml>=6.0.3",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]


[project.scripts]
llimona = "llimona.cli:llimona"

[build-system]
requires = ["uv_build>=0.9.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
cron = [
    "cronsim>=2.7",
]
crypt = [
    "pycryptodome>=3.23.0",
]
dev = [
    "mypy>=1.19.1",
    "poethepoet>=0.42.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "types-croniter>=6.0.0.20250809",
    "types-pyyaml>=6.0.12.20250915",
]
timezone = [
    "pydantic-extra-types>=2.11.0",
    "pydantic[timezone]>=2.12.5",
]

[tool.ruff]
line-length = 120
target-version = "py314"
exclude = [".venv", "dist", "build"]
force-exclude = true

[tool.ruff.lint]
# Rules to enforce
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "RUF", # Ruff-specific rules
]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.uv.workspace]
members = [
    "addons/llimona_azure_openai",
    "addons/llimona_smart_provider",
    "addons/llimona_mock_provider",
    "addons/llimona_opentelemetry",
]

[tool.coverage.run]
omit = [".venv/*", "tests/**", "src/**/cli/**"]
source = ["src"]
branch = true
relative_files = false

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    # Don't complain type checking imports, they aren't run:
    "if TYPE_CHECKING",

    # Don't complain overloads, they aren't run:
    "@overload"
]

[tool.coverage.paths]
source = ["src/"]
omit = [
    "src/**/cli",
    "tests",
]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
addopts = ["--strict-markers", "--strict-config"]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.poe.tasks]
build = "uv build"
test = "pytest -v -s --junitxml=pytest.xml --cov src --cov-report term-missing --cov-report xml:coverage.xml --cov-fail-under=85 --exitfirst"
typecheck = "mypy src"
format = "ruff format **/src/**/*.py **/tests/**/*.py"
"format:check" = "ruff format **/src/**/*.py **/tests/**/*.py --check"
lint = "ruff check **/src/**/*.py **/tests/**/*.py"
"lint:fix" = "ruff check **/src/**/*.py **/tests/**/*.py --fix"

[tool.poe.tasks.clean]
cmd = """
rm -rf ./**/src/**/*.pyc
       ./**/src/**/*.pyo
       ./**/src/**/__pycache__
       ./**/tests/**/*.pyc
       ./**/tests/**/*.pyo
       ./**/tests/**/__pycache__
       .coverage
       coverage.xml
       pytest.xml
       .*_cache
"""
empty_glob = "null"

[tool.poe.tasks.validate]
help = "Execute all validations: typecheck, lint, and test"
sequence = [
    "typecheck",
    "format:check",
    "lint",
    "test"
]

[tool.poe.tasks.prebuild]
help = "Pre-build checks: typecheck and lint"
sequence = [
    "typecheck", 
    "lint"
]

[tool.poe.tasks."clean:all"]
help = "Complete cleanup: cache, coverage, and temporary files"
sequence = [
    "clean",
    { cmd = """rm -rf dist
                      build
                      .coverage
                      coverage.xml
                      pytest.xml
                      **/.*_cache
            """},
]

[tool.poe.tasks.fix]
help = "Fix linting and formatting issues, then run tests"
sequence = [
    "format",
    "lint:fix",
]
