[project]
name = "llimona-opentelemetry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alfred", email = "alfred.santacatalinagea@telefonica.com" }
]
requires-python = ">=3.14"
dependencies = [
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-semantic-conventions>=0.61b0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
llimona = { workspace = true } 

[project.entry-points."llimona.addon"]
opentelemetry = "llimona_opentelemetry:addon"
